[package]
name = "pakr"
version = "0.7.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
description = "Manage Arch Linux packages via any pacman-compatible wrapper"
license = "MIT"
repository = "https://github.com/tranzystorek-io/pakr"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bstr = "0.2"
confy = "0.4"
clap = { version = "3.1", features = ["derive"] }
clap_complete = "3.1"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5"
